Fixed one major whitespace gap.

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html, body {
 .navbar-default {
     background-color: transparent;
     border-color: transparent;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 .navbar-default .navbar-nav>li>a {
     font-size: 30px;
